@@ -55,6 +55,7 @@
    (UNSPEC_SDR			25)
    (UNSPEC_LOADGP		26)
    (UNSPEC_LOAD_CALL		27)
+   (UNSPEC_GP			29)
 
    (UNSPEC_ADDRESS_FIRST	100)
 
